--- a/second/bsconfig.json
+++ b/second/bsconfig.json
@@ -3,16 +3,10 @@
 {
   "name": "second",
   "version": "0.1.0",
-  "sources": [
-    {
-      "dir": "src",
-      "subdirs": true
-    },
-    {
-      "dir": "__tests__",
-      "type": "dev"
-    }
-  ],
+  "sources": {
+    "dir": "__tests__",
+    "type": "dev"
+  },
   "package-specs": {
     "module": "commonjs",
     "in-source": true
